Simplify cache and buffer implementation
Signed-off-by: Geoffroy Jamgotchian <geoffroy.jamgotchian@rte-france.com>